assets/main.css
/* ... */
ul.blogroll li > p:nth-child(2) {
  margin-top: 0;
}

ul.blogroll li > p:nth-child(2) code {
  background-color: inherit;
  border: none;
  font-size: .8rem;
  color: var(--text-light);
  padding: 0;
  margin-top: 0;
}

/*******************************************************************
 * Page sections
 */
main, .after-content {
    /* For better reading experience.
     * I don't want paragraphs to be too narrow, it looks ugly; Though I don't
     * want them to be too wide, either. Reading experience is important:
     * https://en.wikipedia.org/wiki/Eye_movement_in_reading */
	max-width: 45rem;

	margin: auto;
	padding: 0 5%;
}

/* Tags */
.post-list .tags, .post-list time {
	font-size: .9rem;
}
.tags a,
.tags a:visited {
    text-decoration: none;
    color: var(--text-light) !important;
}

footer {
  font-size: .9rem;
  padding: 1.5rem 5%;
  padding-bottom: 2.5rem;
  color: var(--text-light);
}
@media (prefers-color-scheme: light) {
  footer {
    background-color: var(--accent-bg-light);
  }
}
footer a, footer a:visited {
	color: var(--text-light);
	text-decoration: underline;
}
footer a:hover, footer a:visited:hover {
  text-decoration: underline;
}
footer p {
  margin: 0;
}
footer p:not(:first-child) {
  margin-top: 1rem;
}
footer a:not(:first-child) {
  margin-left: .5rem;
}
@media (min-width: 600px) {
  footer {
    text-align: center;
  }
  footer p {
    display: inline-block;
  }
  footer p:first-child {
    margin-right: 1rem;
  }
  footer p.last-line a:first-child {
    margin-left: .5rem;
  }
}

header p {
	text-align: left;
}
header pre {
	margin-bottom: 2rem;
	max-width:auto;
}

.post-date {
	margin-right: 1.5rem;
}

/*******************************************************************
 * Links
 */
a {
  color: var(--link);
}
a:visited {
    color: var(--link-visited);
}
.post-meta a:visited, .meta a:visited, .after-content a:visited {
    color: var(--link-alt);
}

a:hover,
:is(.meta, footer, .after-content) a:hover {
	opacity: .7;
	transition: .25s;
}

/* Differentiating between normal content links and meta content links */
.meta a, .after-content a {
	text-decoration: none;
}
@media (prefers-color-scheme: dark) {
    .meta a, .after-content a {
        color: var(--link-alt);
    }
}

a:focus, form:focus {
  background-color: var(--accent-bg-light);
	text-decoration: none;
}
nav a:focus {
  background-color: initial;
  outline: none;
}

a.anchor {
    text-decoration: none;
    color: var(--non-text-light);
    padding-right: .2rem;
}

/* a.anchor:hover { */
/*     text-decoration: underline; */
/* } */

/*******************************************************************
 * Post components
 */
#post-header h1 {
	margin-bottom: 0.4rem;
  font-family: var(--heading-font);
}
#post-header {
	margin-bottom: 1.5rem;
}
.post-meta, .post-list time, .tags {
    font-family: var(--alt-font);
}
.post-meta {
  margin-top: 1rem;
}
.post-meta p {
  margin: 0;
}
.post-meta, .meta, footer {
	font-size: .9rem;
	color: var(--text-light);
}

section[itemprop="articlebody"] {
    font-family: var(--body-font);
}

section[itemprop="articlebody"].mono {
  font-family: var(--body-mono-font);
}
@media (min-width: 600px) {
  section[itemprop="articlebody"].mono {
    padding: 1rem 2rem;
    background-color: var(--accent-bg-light);
  }
}
section[itemprop="articlebody"].mono :is(h1, h2, h3, h4, h5, h6) {
	font-family: var(--body-mono-font);
}
blockquote.callout {
  background-color: var(--accent-bg-light);
  padding: .5rem 2rem;
  border-radius: var(--standard-border-radius);
}
@media (max-width: 600px) {
  blockquote.callout {
    padding: .25rem .5rem;
  }
}
blockquote.callout p.title{
  margin-top: .5rem;
}
blockquote.callout.note {
  padding-left: 1rem;
  padding-top: .5rem; /* for the label */
}
blockquote.callout.note {
  border-left: 3px solid var(--blue);
}

.box {
  padding: .5rem 1rem;
  background-color: var(--accent-bg-light);
  border: 1px solid var(--border-light);
}

#content div#main {
    padding-bottom: 1rem;
    margin-bottom: 1rem;
}

.footnotes {
    margin-top: 3rem;
	  font-size: .9rem;
}
.footnotes ol {
    margin-top: none;
}
.footnotes a.back {
  color: var(--link-alt);
  text-decoration: none;
}

ul.post-list {
    list-style: none;
    padding-left: 0;
}
.post-list h3, .post-list h2 {
    margin-bottom: 0.5rem;
    font-size: 1.2rem;
    font-weight: 500;
}
.post-list p {
    margin-top: 0;
    margin-bottom: .3rem;
}
.post-list p:has(time) {
  color: var(--text-light);
}
.after-content {
  font-size: .9rem;
}
/*******************************************************************
 * Bookmarks
 */
.bookmarks ul {
  list-style: none;
  margin: 0;
}
@media (max-width: 600px) {
  .bookmarks ul {
    padding: 0;
  }
}
.bookmarks h3 {
  margin-bottom: 0;
  margin-top: .5rem;
}
.bookmarks h3 ~ p {
  margin-top: 0;
}
.bookmarks h3 ~ p code {
  padding: 0;
  background-color: inherit;
  border: none;
  font-size: .8rem;
  color: var(--text-light);
}
.bookmarks .excerpt, .bookmarks .date {
  color: var(--text-light);
  font-family: var(--alt-font);
}
.bookmarks .excerpt {
  margin-top: 0;
}
/*******************************************************************
 * Chroma
 */
.chroma .lntable pre {
    border: 0;
    padding: 0;
}
.chroma .lntable {
    border: 1px solid var(--border);
    padding: .01em .1em;
}

/*******************************************************************
 * Forms
 */
textarea,
select,
input,
progress {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}
button,
.button,
a.button, /* extra specificity to override a */
input[type="submit"],
input[type="reset"],
input[type="button"] {
  border: 1px solid var(--button-border);
  background-color: var(--button-bg);
  color: var(--button-color);
  padding: 0.5rem 0.9rem;
  text-decoration: none;
  line-height: normal;
	transition: .4s;
}
/* ... */

